--- a/css/styles.scss
+++ b/css/styles.scss
@@ -186,6 +186,7 @@ main {
 
 .contact__wrap {
     margin-top: 150px;
+    margin-bottom: 150px;
     padding: 60px;
     box-shadow: 2px 10px 28px 0px rgba(75, 0, 129, .12);
     background-color: #FFFFFF;
